--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,5 +29,5 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1
         with:
           user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          password: ${{ secrets.pypi-AgEIcHlwaS5vcmcCJGMwZTNmODI3LTlmOTgtNDFmZi1iMmE5LTNiN2U3MGE0MGJkMgACKlszLCI5ZDZkMmZkOC05YTdmLTQ3MDAtYWQwMC0zMzNmODBhZjg1YWEiXQAABiBRpe0KQfWSH4XX3icMxwAF6OEEBD-uZtLRONWzmoo3mQ }}
           distributions: "sdist bdist_wheel"
